--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="masked-text"></div>
         <h1>Pterodactyl Server</h1>
 
-        <form id="createServerForm" action="display_server_data.html" method="GET">
+        <form id="createServerForm" action="indatapanel.html" method="GET">
             <div class="input-group">
                 <input type="text" id="server_name" name="server_name" placeholder="Name Server" required>
             </div>
