--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
             <input type="hidden" name="location_id" value="3">
             <input type="hidden" name="egg_id" value="15">
-            <input type="hidden" name="server_domain" value="https://uzumaki.lixxshop.my.id">
+            <input type="hidden" name="server_domain" value="https://hackbackpanelvps.rikionline.shop">
 
             <input type="hidden" id="generated_username_hidden" name="generated_username">
             <input type="hidden" id="generated_password_hidden" name="generated_password">
