--- a/indatapanel.html
+++ b/indatapanel.html
@@ -146,7 +146,7 @@
             <strong style="color: #ef4444;">WARNING:</strong> In a real application, server creation would be handled by a **secure backend**. Sensitive tokens like PTLA and PTLC should **NEVER** be sent or displayed client-side. They belong securely on your backend server only.
         </div>
 
-        <a href="create_server_form.html" class="go-back-button">Create Another Server</a>
+        <a href="index.html" class="go-back-button">Create Another Server</a>
     </div>
 
     <script>
